--- a/trendtailor/trendApp/templates/base1.html
+++ b/trendtailor/trendApp/templates/base1.html
@@ -142,7 +142,7 @@
                 <a href="#" class="btn btn-outline-light w-100 py-3 fs-5">Templates</a>
             </div>
             <div class="mb-5">
-                <a href="#" class="btn btn-outline-light w-100 py-3 fs-5">Archived Contents</a>
+                <a href="{% url 'archived_contents' %}" class="btn btn-outline-light w-100 py-3 fs-5">Archived Contents</a>
             </div>
         </div>
     </div>
