project code updated, fixed issues

--- a/trendtailor/trendApp/templates/base.html
+++ b/trendtailor/trendApp/templates/base.html
@@ -132,25 +132,22 @@
             </div>
             <div class="offcanvas-body">
                 <img src="{% static 'images/TrendTailor_white.png' %}" alt="TrendTailor Logo" class="img-fluid rounded mb-5" style="margin-bottom: 140px;">
-                <div class="mb-5">
+                <div class="mb-2">
                     <a href="{% url 'dashboard' %}" class="btn btn-outline-light w-100 py-3 fs-5">Dashboard</a>
                 </div>
-                <div class="mb-5">
+                <div class="mb-2">
                     <a href="{% url 'content_view' %}" class="btn btn-outline-light w-100 py-3 fs-5">Contents</a>
                 </div>
-                <div class="mb-5">
-                    <a href="{% url 'preferences' %}" class="btn btn-outline-light w-100 py-3 fs-5">My Preferences</a>
+                <div class="mb-2">
+                    <a href="{% url 'preferences' %}" class="btn btn-outline-light w-100 py-3 fs-5">User Preferences</a>
                 </div>
-                <div class="mb-5">
+                <div class="mb-2">
                     <a href="{% url 'summarization' %}" class="btn btn-outline-light w-100 py-3 fs-5">Summarize Content</a>
                 </div>
-                <div class="mb-5">
-                    <a href="#" class="btn btn-outline-light w-100 py-3 fs-5">Templates</a>
-                </div>
-                <div class="mb-5">
+                <div class="mb-2">
                     <a href="{% url 'archived_contents' %}" class="btn btn-outline-light w-100 py-3 fs-5">Archived Contents</a>
                 </div>
-                <div class="mb-5">
+                <div class="mb-2">
                     <a href="{% url 'preview_content' %}" class="btn btn-outline-light w-100 py-3 fs-5">Preview</a>
                 </div>                
             </div>
