--- a/trendtailor/trendApp/templates/accounts/archived_contents.html
+++ b/trendtailor/trendApp/templates/accounts/archived_contents.html
@@ -1,5 +1,53 @@
-{% extends "base.html" %}
+{% extends "base1.html" %}
 {% load static %}
+
+{% block sidebar %}
+    <nav class="col-12 col-md-3 col-lg-2 d-md-block bg-dark bg-gradient sidebar py-3">
+        <div class="position-sticky">
+            <a href="/" class="d-flex justify-content-center mb-3 text-white text-decoration-none">
+                <img src="{% static 'images/TrendTailor_white.png' %}" alt="TrendTailor Logo" class="img-fluid rounded" style="max-width: 150px;">
+            </a>
+            <hr class="text-secondary">
+            <ul class="nav nav-pills flex-column mb-auto px-3">
+                <li class="nav-item">
+                    <a href="{% url 'dashboard' %}" class="nav-link text-white {% if request.path == '/accounts/dashboard/' %}active{% endif %}">
+                        <i class="bi bi-house-door me-2"></i> Dashboard
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'profile' %}" class="nav-link text-white {% if request.path == '/accounts/profile/' %}active{% endif %}">
+                        <i class="bi bi-person me-2"></i> Profile
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'content_view' %}" class="nav-link text-white {% if request.path == '/content_view/' %}active{% endif %}">
+                        <i class="bi bi-speedometer2 me-2"></i> Contents
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'preferences' %}" class="nav-link text-white {% if request.path == '/preferences/' %}active{% endif %}">
+                        <i class="bi bi-table me-2"></i> User Preferences
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'summarization' %}" class="nav-link text-white {% if request.path == '/summarize/' %}active{% endif %}">
+                        <i class="bi bi-grid me-2"></i> Summarize Content
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'archived_contents' %}" class="nav-link text-white {% if request.path == '/archived/' %}active{% endif %}">
+                        <i class="bi bi-archive me-2"></i> Archived Contents
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'preview_content' %}" class="nav-link text-white {% if request.path == '/preview/' %}active{% endif %}">
+                        <i class="bi bi-archive me-2"></i> Preview
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+{% endblock sidebar %}
 
 {% block body %}
 <body class="bg-dark text-white">
@@ -33,7 +81,7 @@
                             <div class="d-flex align-items-center justify-content-between">
                                 <a href="{{ content.url }}" class="btn btn-primary">Read More</a>
                                 <div>
-                                    <div class="btn-group">
+                                    <div class="btn-group mt-2">
                                         <button type="button" class="btn btn-outline-light btn-sm dropdown-toggle ms-2" data-bs-toggle="dropdown" aria-expanded="false">
                                             <i class="fa fa-share"></i> Share
                                         </button>
@@ -50,10 +98,10 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <button class="btn btn-outline-light btn-sm ms-2" aria-label="Like">
+                                    <button class="btn btn-outline-light btn-sm ms-2 mt-2" aria-label="Like">
                                         <i class="fa fa-thumbs-up"></i> Like
                                     </button>
-                                    <button class="btn btn-outline-warning btn-sm ms-2 unarchive-btn" data-id="{{ content.id }}">
+                                    <button class="btn btn-outline-warning btn-sm ms-2 unarchive-btn mt-2" data-id="{{ content.id }}">
                                         <i class="fa fa-times-circle"></i> Unarchive
                                     </button>
                                 </div>
