--- a/trendtailor/trendApp/templates/dashboard.html
+++ b/trendtailor/trendApp/templates/dashboard.html
@@ -25,22 +25,70 @@
     </style>
 {% endblock head %}
 
+{% block sidebar %}
+    <nav class="col-12 col-md-3 col-lg-2 d-md-block bg-dark bg-gradient sidebar py-3">
+        <div class="position-sticky">
+            <a href="/" class="d-flex justify-content-center mb-3 text-white text-decoration-none">
+                <img src="{% static 'images/TrendTailor_white.png' %}" alt="TrendTailor Logo" class="img-fluid rounded" style="max-width: 150px;">
+            </a>
+            <hr class="text-secondary">
+            <ul class="nav nav-pills flex-column mb-auto px-3">
+                <li class="nav-item">
+                    <a href="{% url 'dashboard' %}" class="nav-link text-white {% if request.path == '/accounts/dashboard/' %}active{% endif %}">
+                        <i class="bi bi-house-door me-2"></i> Dashboard
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'profile' %}" class="nav-link text-white {% if request.path == '/accounts/profile/' %}active{% endif %}">
+                        <i class="bi bi-person me-2"></i> Profile
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'content_view' %}" class="nav-link text-white {% if request.path == '/content_view/' %}active{% endif %}">
+                        <i class="bi bi-speedometer2 me-2"></i> Contents
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'preferences' %}" class="nav-link text-white {% if request.path == '/preferences/' %}active{% endif %}">
+                        <i class="bi bi-table me-2"></i> User Preferences
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'summarization' %}" class="nav-link text-white {% if request.path == '/accounts/summarization/' %}active{% endif %}">
+                        <i class="bi bi-grid me-2"></i> Summarize Content
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'archived_contents' %}" class="nav-link text-white {% if request.path == '/archived/' %}active{% endif %}">
+                        <i class="bi bi-archive me-2"></i> Archived Contents
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'preview_content' %}" class="nav-link text-white {% if request.path == '/preview/' %}active{% endif %}">
+                        <i class="bi bi-archive me-2"></i> Preview
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+{% endblock sidebar %}
+
 {% block body %}   
 <body class="bg-dark text-light">
     <div class="container-fluid">
         <div class="row">
-            
-            
+        
             <!-- Main Content -->
-            <div class="col ms-5">
-                <!-- Existing Content -->
-                <div class="container mt-2">
+            <main class="col py-3">
+                <div class="container">
                     <div class="row">
+                        <!-- Preferences -->
                         <div class="col-md-6 mb-3">
                             <div class="card bg-secondary text-white">
                                 <div class="card-body">
                                     <h5 class="card-title">User Preferences</h5>
                                     <div class="card-group mt-3">
+                                        <!-- Each Preference Card -->
                                         <div class="card text-white bg-dark mb-3">
                                             <div class="card-header">News Sources</div>
                                             <div class="card-body text-info">
@@ -61,14 +109,15 @@
                                         </div>
                                     </div>
                                 </div>
-                                <form action="{% url 'preferences' %}" method="POST" class="needs-validation">
+                                <form action="{% url 'preferences' %}" method="POST">
                                     {% csrf_token %}
                                     <button type="submit" class="btn btn-primary mt-2 w-100">Edit Preferences</button>
                                 </form>
                             </div>
                         </div>
+
+                        <!-- Scheduled Content -->
                         <div class="col-md-6 mb-3">
-                            <!-- Scheduled Content List -->
                             <div class="card bg-secondary text-white">
                                 <div class="card-body">
                                     <h5 class="card-title">Scheduled Content</h5>
@@ -88,11 +137,10 @@
                                                     <td>{{ schedule.schedule_date|date:"F jS, Y \\a\\t g:i A" }}</td>
                                                     <td>{{ schedule.get_repeat_option_display|title }}</td>
                                                     <td>
-                                                        <button class="btn btn-warning btn-sm edit-button mb-1"
-                                                            data-bs-toggle="modal" data-bs-target="#editModal"
-                                                            data-id="{{ schedule.id }}"
-                                                            data-date="{{ schedule.schedule_date|date:'Y-m-d\TH:i' }}"
-                                                            data-repeat="{{ schedule.repeat_option }}">Edit</button>
+                                                        <button class="btn btn-warning btn-sm mb-1" data-bs-toggle="modal" data-bs-target="#editModal"
+                                                                data-id="{{ schedule.id }}"
+                                                                data-date="{{ schedule.schedule_date|date:'Y-m-d\TH:i' }}"
+                                                                data-repeat="{{ schedule.repeat_option }}">Edit</button>
                                                         <form method="POST" action="{% url 'delete_schedule' schedule.id %}" class="d-inline">
                                                             {% csrf_token %}
                                                             <button class="btn btn-danger btn-sm">Delete</button>
@@ -102,32 +150,33 @@
                                             {% endfor %}
                                         </tbody>
                                     </table>
+                                    <button type="button" class="btn btn-primary mt-3" data-bs-toggle="modal" data-bs-target="#scheduleModal">
+                                        Schedule Content
+                                    </button>
                                 </div>
-                                <!-- Schedule Content Button -->
-                                <button type="button" class="btn btn-primary mt-3" data-bs-toggle="modal" data-bs-target="#scheduleModal">
-                                    Schedule Content
-                                </button>
                             </div>
                         </div>
                     </div>
 
+                    <!-- Search Bar -->
                     <div class="row">
                         <div class="col-12 mb-3">
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Search..." aria-label="Search" aria-describedby="button-addon2">
-                                <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+                                <input type="text" class="form-control" placeholder="Search..." aria-label="Search">
+                                <button class="btn btn-outline-secondary" type="button">Search</button>
                             </div>
                         </div>
                     </div>
-                    
+
+                    <!-- Article Cards -->
                     <section class="container-fluid">
-                        <div class="row ">
+                        <div class="row mb-3">
                             <h2 class="text-center">My Preferred Articles</h2>
                         </div>
-                        <div class="row">
+                        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
                             {% for article in articles %}
-                                <div class="col-md-4">
-                                    <div class="card shadow-sm bg-dark bg-gradient text-white" style='border: 8px solid #000;'>
+                                <div class="col">
+                                    <div class="card shadow-sm bg-dark text-white h-100">
                                         {% if article.urlToImage %}
                                             <div class="ratio ratio-16x9">
                                                 <img src="{{ article.urlToImage }}" class="card-img-top" alt="{{ article.title }}" style="object-fit: cover;">
@@ -137,60 +186,50 @@
                                                 <img src="{% static 'images/TrendTailor.png' %}" class="card-img-top" alt="{{ article.title }}" style="object-fit: cover;">
                                             </div>
                                         {% endif %}
-                                        <div class="card-body">
-                                            <h5 class="card-title text-truncate">{{ article.title }}</h5>
-                                            <p class="card-text">{{ article.description|truncatechars:70 }}</p>
-                                            <div class="d-flex align-items-center justify-content-between">
-                                                <a href="{{ article.url }}" class="btn btn-primary">Read More</a>
-                                                <div> 
-                                                    <div class="btn-group">
-                                                        <button type="button" class="btn btn-outline-light btn-sm dropdown-toggle ms-2" data-bs-toggle="dropdown" aria-expanded="false">
-                                                            <i class="fa fa-share"></i> Share
-                                                        </button>
-                                                        <ul class="dropdown-menu">
-                                                            <li>
-                                                                <button type="button" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#shareModal-{{ article.id }}">
-                                                                    <i class="fa fa-plus-circle"></i> Select Templates
-                                                                </button>
-                                                            </li>
-                                                            <li>
-                                                                <button type="button" class="dropdown-item share-btn" data-title="{{ article.title }}" data-url="{{ article.url }}">
-                                                                    <i class="fa fa-share"></i> Share Via
-                                                                </button>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-
-                                                    <button class="btn btn-outline-light btn-sm ms-2" onclick="" aria-label="Like">
-                                                        <i class="fa fa-thumbs-up"></i> Like
+                                        <div class="card-body d-flex flex-column justify-content-between">
+                                            <div>
+                                                <h5 class="card-title text-truncate">{{ article.title }}</h5>
+                                                <p class="card-text">{{ article.description|truncatechars:70 }}</p>
+                                            </div>
+                                            <div>
+                                                <a href="{{ article.url }}" class="btn btn-primary mt-1">Read More</a>
+                                                <!-- Action Buttons -->
+                                                <div class="btn-group mt-1 mx-1">
+                                                    <button class="btn btn-outline-light btn-sm dropdown-toggle" data-bs-toggle="dropdown">
+                                                        <i class="fa fa-share"></i> Share
                                                     </button>
-                                                    
-                                                    <!--Scrum 10 Task 31 Archive section-->
-                                                    <button class="btn btn-outline-light btn-sm ms-2 archive-btn"
-                                                        data-title="{{ article.title }}"
-                                                        data-content="{{ article.description|default_if_none:'' }}"
-                                                        data-image-url="{{ article.urlToImage|default_if_none:'' }}"
-                                                        data-url="{{ article.url }}"
-                                                        data-platform="dashboard"
-                                                        data-original-id="{{ article.id }}">
-                                                        <i class="fa fa-save"></i> Archive
-                                                    </button>
-
+                                                    <ul class="dropdown-menu">
+                                                        <li><button type="button" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#shareModal-{{ article.id }}"><i class="fa fa-plus-circle"></i> Select Templates</button></li>
+                                                        <li><button type="button" class="dropdown-item share-btn" data-title="{{ article.title }}" data-url="{{ article.url }}"><i class="fa fa-share"></i> Share Via</button></li>
+                                                    </ul>
                                                 </div>
+                                                <button class="btn btn-outline-light btn-sm ms-2 mx-1 mt-1"><i class="fa fa-thumbs-up"></i> Like</button>
+                                                <button class="btn btn-outline-light btn-sm ms-2 archive-btn mt-1"
+                                                    data-title="{{ article.title }}"
+                                                    data-content="{{ article.description|default_if_none:'' }}"
+                                                    data-image-url="{{ article.urlToImage|default_if_none:'' }}"
+                                                    data-url="{{ article.url }}"
+                                                    data-platform="dashboard"
+                                                    data-original-id="{{ article.id }}">
+                                                    <i class="fa fa-save"></i> Archive
+                                                </button>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            {% endfor %}               
+                            {% endfor %}
                         </div>
-                        <br>
-                        <form action="{% url 'content_view' %}" method="POST" class="d-flex justify-content-center" class="needs-validation d-flex justify-content-center">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-primary">Show More</button>
-                        </form>            
+
+                        <!-- Show More Button -->
+                        <div class="row mt-4 justify-content-center">
+                            <form action="{% url 'content_view' %}" method="POST" class="col-auto">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-primary">Show More</button>
+                            </form>
+                        </div>
                     </section>
                 </div>
-            </div>
+            </main>
         </div>
     </div>
 
