added api and search functions

--- a/trendtailor/trendApp/templates/Summarization.html
+++ b/trendtailor/trendApp/templates/Summarization.html
@@ -91,7 +91,7 @@
                             {% csrf_token %}
                             <div class="mb-3">
                                 <label for="contentFile" class="form-label">Upload a File</label>
-                                <input type="file" class="form-control" id="contentFile" name="contentFile" required>
+                                <input type="file" class="form-control" id="contentFile" name="contentFile">
                             </div>
                             <div class="mb-3">
                                 <label for="textInput" class="form-label">Or Paste Text</label>
